kqed_dev4/src/objects/Alternate__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alternate</relationshipLabel>
        <relationshipName>Alternate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Benefit__c</fullName>
        <label>Premium/Benefit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Alternate</relationshipLabel>
        <relationshipName>Alternate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Alternate</label>
    <nameField>
        <displayFormat>Alt-{0000}</displayFormat>
        <label>Alternate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>